--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.xuexiang.xlog">
+    package="com.xuexiang.xlogdemo">
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS"/>
@@ -25,7 +25,7 @@
             </intent-filter>
         </activity>
 
-        <receiver android:name=".crash.StartAppReceiver"/>
+        <receiver android:name="com.xuexiang.xlog.crash.StartAppReceiver"/>
     </application>
 
 </manifest>
