--- a/app/src/main/assets/AndroidManifest.xml
+++ b/app/src/main/assets/AndroidManifest.xml
@@ -7,14 +7,14 @@
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
 
     <application
-        android:name=".MyApplication"
+        android:name="com.xuexiang.xlogdemo.MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name="com.xuexiang.xlogdemo.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
