--- a/build.gradle
+++ b/build.gradle
@@ -1,29 +1,19 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+    apply from: 'https://raw.githubusercontent.com/xuexiangjys/XUtil/master/versions.gradle'
+    addRepos(repositories) //增加代码仓库
 
-    repositories {
-        google()
-        jcenter()
-        allprojects {
-            repositories {
-                maven { url 'https://jitpack.io' }
-            }
-        }
-    }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.1'
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.4.1'
+        classpath deps.android_gradle_plugin
+        classpath deps.android_maven_gradle_plugin
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
 }
 
 allprojects {
-    repositories {
-        google()
-        jcenter()
-    }
+    addRepos(repositories)
 }
 
 task clean(type: Delete) {
