解决Android7.0发送邮件失败的问题

--- a/xloglib/src/main/AndroidManifest.xml
+++ b/xloglib/src/main/AndroidManifest.xml
@@ -11,4 +11,17 @@
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
 
+    <application>
+        <provider
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="${applicationId}.xlog.provider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/xlog_provider_paths" />
+        </provider>
+    </application>
+
+
 </manifest>
