--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,14 +49,14 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation deps.support.app_compat
-//    implementation project(':xloglib')
+    implementation project(':xloglib')
 
-    implementation 'com.github.xuexiangjys:XLog:1.1.3'
+//    implementation 'com.github.xuexiangjys:XLog:1.1.3'
 
-    implementation 'com.github.xuexiangjys.XUtil:xutil-core:1.1.2'
+    implementation 'com.github.xuexiangjys.XUtil:xutil-core:1.1.3'
     //XPage
-    implementation 'com.github.xuexiangjys.XPage:xpage-lib:2.1.8'
-    annotationProcessor 'com.github.xuexiangjys.XPage:xpage-compiler:2.1.8'
+    implementation 'com.github.xuexiangjys.XPage:xpage-lib:2.2.2'
+    annotationProcessor 'com.github.xuexiangjys.XPage:xpage-compiler:2.2.2'
     //butterknife的sdk
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
