--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.xuexiang.xaop' //引用xaop插件
 
 android {
     compileSdkVersion 27
@@ -61,6 +62,7 @@ dependencies {
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 
+    implementation 'com.github.xuexiangjys.XAOP:xaop-runtime:1.0.1'
     //Gson序列化反序列化的依赖包
     implementation deps.gson
 }
