修改FileProvider注册的类名，防止合并manifest出现冲突

--- a/xloglib/src/main/AndroidManifest.xml
+++ b/xloglib/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
 
     <application>
         <provider
-            android:name="android.support.v4.content.FileProvider"
+            android:name="android.support.v4.content.XLogFileProvider"
             android:authorities="${applicationId}.xlog.provider"
             android:exported="false"
             android:grantUriPermissions="true">
