--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,9 +50,9 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation deps.support.app_compat
-//    implementation project(':xloglib')
+    implementation project(':xloglib')
 
-    implementation 'com.github.xuexiangjys:XLog:1.1.4'
+//    implementation 'com.github.xuexiangjys:XLog:1.1.4'
 
     implementation 'com.github.xuexiangjys.XUtil:xutil-core:1.1.3'
     //XPage
