重命名模块

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,7 +50,7 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation deps.support.app_compat
-    implementation project(':xloglib')
+    implementation project(':xlog-core')
 
 //    implementation 'com.github.xuexiangjys:XLog:1.1.4'
 
