--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,10 +50,11 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation deps.support.app_compat
-    implementation project(':xlog-core')
-    implementation project(':xlog-crash')
+//    implementation project(':xlog-core')
+//    implementation project(':xlog-crash')
 
-//    implementation 'com.github.xuexiangjys:XLog:1.1.4'
+    implementation 'com.github.xuexiangjys.XLog:xlog-core:1.2.0'
+    implementation 'com.github.xuexiangjys.XLog:xlog-crash:1.2.0'
 
     implementation 'com.github.xuexiangjys.XUtil:xutil-core:1.1.3'
     //XPage
