升级库的版本

--- a/xlog-core/build.gradle
+++ b/xlog-core/build.gradle
@@ -20,5 +20,5 @@ dependencies {
     compileOnly deps.support.app_compat
 }
 
-apply from: "https://raw.githubusercontent.com/xuexiangjys/XUtil/master/JitPackUpload.gradle"
+apply from: "../JitPackUpload.gradle"
 
