--- a/xlog-crash/build.gradle
+++ b/xlog-crash/build.gradle
@@ -21,5 +21,5 @@ dependencies {
     compileOnly project(':xlog-core')
 }
 
-apply from: "https://raw.githubusercontent.com/xuexiangjys/XUtil/master/JitPackUpload.gradle"
+apply from: "../JitPackUpload.gradle"
 
